@@ -1,0 +1,11 @@
+#!/usr/bin/env python
+
+"""Helper functions for SpacePy unit tests
+
+This module is importable from test scripts that are in this directory.
+"""
+
+import os.path
+
+
+testsdir = os.path.dirname(os.path.abspath(__file__))
