@@ -35,6 +35,7 @@ from test_plot_utils import *
 from test_rst import *
 from test_lib import *
 from test_ae9ap9 import *
+from test_testing import *
 # add others here as they are written
 
 if __name__ == '__main__':
