@@ -1,0 +1,19 @@
+#!/usr/bin/env python
+
+"""Test of test-suite helper functions
+
+Tests to ensure that the more involved support in spacepy_testing works.
+"""
+
+import unittest
+import warnings
+
+import spacepy_testing
+
+
+class SpacepyTestingTests(unittest.TestCase):
+    """Simple tests for the testing support"""
+
+
+if __name__ == '__main__':
+    unittest.main()
